<resources>
    <string name="app_name">Inventory App</string>
    <string name="input_error_name">Item name cannot be empty</string>
    <string name="input_error_price">Price cannot be empty</string>
    <string name="input_error_supplier">Supplier cannot be empty</string>
    <string name="action_save">Save</string>
    <string name="action_delete_item">Delete Item</string>
    <string name="action_clear">Clear Fields</string>
    <string name="empty_view_text">Click the button below to add items</string>
    <string name="empty_view_text2">List is empty</string>
    <string name="action_delete_all">Delete All Items</string>
    <string name="action_test_data">Insert Test Data</string>
    <string name="editor_activity_title_new_item">Add New Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="editor_delete_item_failed">Error removing item</string>
    <string name="editor_delete_item_successful">Item removed</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Remove</string>
    <string name="delete_dialog_msg">Remove this item?</string>
    <string name="field_cleared">All fields cleared</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Continue editing</string>
    <string name="unsaved_changes_dialog_msg">Discard unsaved changes?</string>
    <string name="invalid_menu">Invalid menu selection</string>
    <string name="insert_test_data">Test data entered</string>
    <string name="item_saved">Item saved</string>
    <string name="editor_update_item_failed">Update failed</string>
    <string name="editor_update_item_successful">Changes saved</string>
    <string name="editor_insert_item_failed">Error saving item</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="category_itemInfo">Item Info</string>
    <string name="item_name">Item Name</string>
    <string name="item_supplier">Supplier Name</string>
    <string name="category_itemDetails">Item Details</string>
    <string name="item_price">Price</string>
    <string name="category_itemQuantity">Quantity</string>
    <string name="item_sale">Sale</string>
    <string name="category_itemImage">Image</string>
    <string name="select_image">Select Image</string>
    <string name="upload_successful">Upload successful</string>
    <string name="order_more">Order More</string>
    <string name="in_stock">In Stock: %1$s</string>
    <string name="out_of_stock">%1$s is out of stock</string>
    <string name="input_price_zero">Invalid price</string>
</resources>
