<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.example.android.inventoryapp.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_itemInfo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_name"
                    style="@style/DetailsEdit"
                    android:hint="@string/item_name" />

                <EditText
                    android:id="@+id/editText_supplier"
                    style="@style/DetailsEdit"
                    android:hint="@string/item_supplier" />

                <EditText
                    android:id="@+id/editText_price"
                    style="@style/DetailsEdit"
                    android:hint="@string/item_price"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_itemQuantity" />

            <Button
                android:id="@+id/button_decrement"
                style="@style/Buttons"
                android:text="-" />

            <EditText
                android:id="@+id/editText_quantity"
                style="@style/DetailsEdit"
                android:layout_width="60dp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:text="0" />

            <Button
                android:id="@+id/button_increment"
                style="@style/Buttons"
                android:text="+" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_itemImage" />

            <Button
                android:id="@+id/edit_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/order_more" />
</RelativeLayout>
